force-app/main/default/objects/Home_Care_Seeker_Consumer__c/Home_Care_Seeker_Consumer__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Home Care Consumer records</description>
    <label>Consumer</label>
    <nameField>
        <label>Consumer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>