force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19-25 years</fullName>
            </value>
            <value>
                <fullName>26-64 years</fullName>
            </value>
            <value>
                <fullName>64-74 years</fullName>
            </value>
            <value>
                <fullName>75 or older</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>