force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Alameda_Alliance_ID__c.field-meta.xml
<CustomField>
    <fullName>Alameda_Alliance_ID__c</fullName>
    <label>Alameda Alliance ID#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>