force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Are_you_a_Veteran__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Veteran__c</fullName>
    <label>Are you a Veteran?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>