force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Are_you_able_to_travel_outside_of_your_h__c.field-meta.xml
<CustomField>
    <fullName>Are_you_able_to_travel_outside_of_your_h__c</fullName>
    <description>Are you able to travel outside of your home for long period of times, for example, for 4 hours?</description>
    <label>Are you able to travel outside your home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>