force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Associated_IDs__c.field-meta.xml
<CustomField>
    <fullName>Associated_IDs__c</fullName>
    <description>There is multiple associations,. Will be using a pop up simmilar to duplicate checks</description>
    <label>Associated IDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>