force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Authorization_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization Form Submitted</label>
    <type>Checkbox</type>
</CustomField>