force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Best_way_to_reach_you__c.field-meta.xml
<CustomField>
    <fullName>Best_way_to_reach_you__c</fullName>
    <label>Best way to reach you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calling your home phone</fullName>
            </value>
            <value>
                <fullName>Calling your cell phone</fullName>
            </value>
            <value>
                <fullName>Texting your cell phone</fullName>
            </value>
            <value>
                <fullName>Emailing you</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>