force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Calls_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Calls_Allowed__c</fullName>
    <label>Calls Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>