force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/CCA_Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>CCA_Consumer_ID__c</fullName>
    <description>CCA ID for the Consumer</description>
    <label>CCA Consumer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>