force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_ID__c</fullName>
    <label>Class ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>