force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/CLTCEC_ID__c.field-meta.xml
<CustomField>
    <fullName>CLTCEC_ID__c</fullName>
    <label>CLTCEC ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>