force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Consumer_Informed__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Informed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Informed</label>
    <type>Checkbox</type>
</CustomField>