force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Consumer_Provider__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Provider__c</fullName>
    <label>Consumer/Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>LACC Student</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>