force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Date_CLTCEC_Received_Medi_Cal_ID__c.field-meta.xml
<CustomField>
    <fullName>Date_CLTCEC_Received_Medi_Cal_ID__c</fullName>
    <label>Date CLTCEC Received Medi-Cal ID#</label>
    <type>Date</type>
</CustomField>