force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Date_Of_House_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_House_Visit__c</fullName>
    <label>Date Of House Visit</label>
    <type>Date</type>
</CustomField>