force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Do_you_have_a_way_to_get_to_two_training__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_way_to_get_to_two_training__c</fullName>
    <inlineHelpText>(for example: you drive yourself, someone drives you, or you take public transportation, etc.)?</inlineHelpText>
    <label>Do you have a way to get to two training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>