force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Emergency_Contact_Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Primary_Name__c</fullName>
    <label>Emergency Contact Primary Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>