force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Emergency_Contact_Primary_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Primary_Relation__c</fullName>
    <label>Emergency Contact Primary Relation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>