force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Emergency_Contact_Primary_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Primary_Telephone__c</fullName>
    <label>Emergency Contact Primary Telephone</label>
    <type>Phone</type>
</CustomField>