force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Emergency_Contact_Secondary_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Secondary_Relation__c</fullName>
    <label>Emergency Contact Secondary Relation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>