force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Form_Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Form_Language_Preference__c</fullName>
    <label>Form Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>