force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Health_Net_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Health_Net_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Net Eligible</label>
    <type>Checkbox</type>
</CustomField>