force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/How_did_you_find_out_about_us_if_other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_out_about_us_if_other__c</fullName>
    <label>How did you find out about us (if other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>