force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/If_Other_selected_above__c.field-meta.xml
<CustomField>
    <fullName>If_Other_selected_above__c</fullName>
    <label>If &apos;Other&apos; (Best Way to Reach you)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>