force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/If_yes_please_explain_why__c.field-meta.xml
<CustomField>
    <fullName>If_yes_please_explain_why__c</fullName>
    <label>If yes, please explain why</label>
    <length>100</length>
    <type>Text</type>
</CustomField>