force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/IHSS_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>IHSS_ID_Number__c</fullName>
    <label>IHSS ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>