force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/LA_Care_ID__c.field-meta.xml
<CustomField>
    <fullName>LA_Care_ID__c</fullName>
    <label>LA Care ID#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>