force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Last_4_Digits_of_CA_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_of_CA_ID__c</fullName>
    <label>Last 4 Digits of CA ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>