force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Medi_Cal_ID__c.field-meta.xml
<CustomField>
    <fullName>Medi_Cal_ID__c</fullName>
    <label>Medi-Cal ID#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>