force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/MediCal_ID__c.field-meta.xml
<CustomField>
    <fullName>MediCal_ID__c</fullName>
    <label>MediCal ID #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>