force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Medicare_ID__c.field-meta.xml
<CustomField>
    <fullName>Medicare_ID__c</fullName>
    <label>Medicare ID#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>