force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Member_of_Contra_Costa_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Contra_Costa_Health_Plan__c</fullName>
    <label>Member of Contra Costa Health Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>