force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Not_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Reason__c</fullName>
    <label>Not Qualified Reason</label>
    <type>TextArea</type>
</CustomField>