force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Preferred_Name_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name_Nickname__c</fullName>
    <label>Preferred Name/ Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>