force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LA Care (IHSS+)</fullName>
            </value>
            <value>
                <fullName>IHSS+ A&amp;D</fullName>
            </value>
            <value>
                <fullName>Education Fund</fullName>
            </value>
            <value>
                <fullName>CDPH/UCSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>