force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Qualification_Type__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Type__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Team</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>