force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified?</label>
    <type>Checkbox</type>
</CustomField>