force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Receiving_Disability_SSI__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Disability_SSI__c</fullName>
    <label>Receiving Disability/SSI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>