force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Record_was_imported__c.field-meta.xml
<CustomField>
    <fullName>Record_was_imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record was imported?</label>
    <type>Checkbox</type>
</CustomField>