force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <label>Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Ongoing Assessment</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Customer Participation Form Submitted</fullName>
            </value>
            <value>
                <fullName>Customer Consent Form Signed</fullName>
            </value>
            <value>
                <fullName>Customer Authorization Form Signed</fullName>
            </value>
            <value>
                <fullName>Enrolled in a Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>