force-app/main/default/objects/Home_Care_Seeker_Consumer__c/fields/Rolodex_ID__c.field-meta.xml
<CustomField>
    <fullName>Rolodex_ID__c</fullName>
    <label>Rolodex ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>